--- a/index.html
+++ b/index.html
@@ -19,18 +19,14 @@
         <p>AUDI, um carro completo  </p> <!--filmes em geral-->
         </div>
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/lixuwpaCQkM?si=b-ZMy9gw1Uc3zcEg"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/WrZ6b7zYlq0?si=lbm7F9M1JIBQsa0X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 <SECtion class="categoria"> 
     <H2>Principais Propagandas</H2>
     <DIv class="categoria-videos"> 
-        <a href="https://youtu.be/qoT4PlZn42Q?si=fuvK8KwmYRq4kGWv">
-            <img src="https://www.fys.com.br/media/p0ea5idw/sobre_bloco-1.webp" alt="">
+        <a href="https://www.youtube.com/watch?v=WrZ6b7zYlq0">
+            <img src="https://i.ytimg.com/vi/cZSCOzP0xUY/maxresdefault.jpg" alt="">
         </a>
 
         <a href="https://www.youtube.com/watch?v=3XmBUYC8tfs">
