--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
             <img src="https://i.ytimg.com/vi/cZSCOzP0xUY/maxresdefault.jpg" alt="">
         </a>
 
-        <a href="https://www.youtube.com/watch?v=3XmBUYC8tfs">
-            <img src="https://img.youtube.com/vi/3XmBUYC8tfs/maxresdefault.jpg" alt="">
+        <a href="https://www.youtube.com/watch?v=p14idonS6ws">
+            <img src="https://yt3.googleusercontent.com/ytc/AIdro_k6Gcoz6ba2PbJzEwq-6cSEXMbcZoyrJQAsV1robBHR1w=s900-c-k-c0x00ffffff-no-rj" alt="">
         </a>
 
-        <a href="https://www.youtube.com/watch?v=_lwMF0F_Amw">
-            <img src="https://photos1.blogger.com/blogger/3926/2234/1600/Pepsi%20Twist.jpg.0.jpg" alt="">
+        <a href="https://www.youtube.com/watch?v=y3GMjeyJQ8g">
+            <img src="https://yt3.googleusercontent.com/ytc/AIdro_ms61l0PYBwwbJe_RzJliPP6OUjsn81mxezaTgK3KmHvB8=s900-c-k-c0x00ffffff-no-rj" alt="">
         </a>
 
-        <a href="https://www.youtube.com/watch?v=CJuuhAnrBFg">
-            <img src="https://i.panelinha.com.br/i1/bn-2869-destaque02.webp" alt="">
+        <a href="https://www.youtube.com/watch?v=TbehTDmXTHo">
+            <img src="https://yt3.googleusercontent.com/ytc/AIdro_nAvepFjBJqrehAq34WYeirqBtNKny_qhUu6BD4kc7foFU=s900-c-k-c0x00ffffff-no-rj" alt="">
         </a>
 
-        <a href="https://www.youtube.com/watch?v=69OtsnADAds">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQkF02veVeJke571l6at_5KAUTjs73JtnxoJg&s" alt="">
+        <a href="https://www.youtube.com/watch?v=Pjo4fLdjufE">
+            <img src="https://i.ytimg.com/vi/PANXSBFRGKU/mqdefault.jpg" alt="">
         </a>
     </DIv>
 
