--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 </head>
 
 <body>
-    <header>MELHORES PROPAGANDAS</header> <!--titulo-->
+    <header>CLIPS DE FF</header> <!--titulo-->
     <section class="chamada">
     <div class="chamada-texto">
-        <h1> criatividade é tudo :)</h1> <!--subtitulo-->
-        <p>AUDI, um carro completo  </p> <!--filmes em geral-->
+        <h1> MELHORES HIGHLIGTS :)</h1> <!--subtitulo-->
+        <p>FREE FIRE, o jogo.  </p> <!--filmes em geral-->
         </div>
         <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/WrZ6b7zYlq0?si=lbm7F9M1JIBQsa0X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 <SECtion class="categoria"> 
-    <H2>Principais Propagandas</H2>
+    <H2>Principais videos</H2>
     <DIv class="categoria-videos"> 
         <a href="https://www.youtube.com/watch?v=WrZ6b7zYlq0">
             <img src="https://i.ytimg.com/vi/cZSCOzP0xUY/maxresdefault.jpg" alt="">
